corrected icon alignment issue

--- a/ui/src/components/devices/DeviceTable.css
+++ b/ui/src/components/devices/DeviceTable.css
@@ -1,4 +1,6 @@
+.icon-span: {
+	
+}
 .icon-set:{
-	vertical-align: -2em;
-	margin-right: 2.5em;
+
 }
